docs(agents): streamline AGENTS.md with progressive disclosure (#292)
* docs(agents): streamline AGENTS.md with progressive disclosure

BREAKING: AGENTS.md reduced from 308 to 72 lines (77% reduction)

Changes:
- Streamline AGENTS.md to focus on universally applicable critical rules
- Add .agent/rules/ for always-applied guidelines (Antigravity rules)
- Add .agent/workflows/ for on-demand procedures (Antigravity workflows)
- Add .gemini/settings.json to configure Gemini CLI to use AGENTS.md
- Add multi-PR workflow guidance (no worktrees, squash merge handling)
- Add stacked PRs workflow documentation
- Add conflict resolution step-by-step guide

New files:
- .agent/rules/git-workflow.md - Git workflow, branching, squash merge
- .agent/rules/code-quality.md - Lint, TDD, test naming, engineering notes
- .agent/workflows/github-cli.md - GitHub CLI patterns for API and PR reviews
- .agent/workflows/github-actions.md - SHA pinning, workflow debugging
- .agent/workflows/github-issues.md - Issue creation and label conventions
- .agent/workflows/conflict-resolution.md - Rebase/merge conflict resolution
- .gemini/settings.json - Gemini CLI configuration

Cross-platform compatibility:
- AGENTS.md now follows the open standard (agents.md)
- Works with: Antigravity, GitHub Copilot, Cursor, Aider, Gemini CLI, and more

* ci: fix path filter to skip CI for docs-only changes

The paths-filter was incorrectly triggering CI for .md files because
the default predicate-quantifier is 'some', which doesn't properly
handle negation patterns with mixed positive/negative globs.

Changes:
- Add predicate-quantifier: 'every' to properly handle exclusions
- Add .agent/** and .gemini/** to exclusion list
- Add groovy-*/** and tests/** to positive patterns for completeness
- Use **/*.md instead of *.md to match all .md files, not just root
- Add settings.gradle.kts to trigger patterns

Now PRs that only change documentation files (.md), agent config
(.agent/), or Gemini config (.gemini/) will s

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,17 +97,27 @@ jobs:
           # For workflow_run events, use the triggering workflow's head commit as base
           # This fixes the 'before field is missing' warning
           base: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_sha || '' }}
+          # Use 'every' predicate to properly handle exclusion patterns
+          # With 'some' (default), a file matches if it matches ANY pattern, breaking negations
+          predicate-quantifier: 'every'
           filters: |
             run_main_ci:
+              # Positive patterns: paths that require CI
               - 'src/**'
               - 'gradle/**'
+              - 'groovy-*/**'
+              - 'tests/**'
               - '*.gradle'
               - '*.gradle.kts'
               - 'gradle.properties'
+              - 'settings.gradle.kts'
               - '.github/workflows/ci.yml'
-              - '!infra/**'
-              - '!*.md'
+              # Negative patterns: paths that should NOT trigger CI
+              - '!**/*.md'
+              - '!.agent/**'
+              - '!.gemini/**'
               - '!docs/**'
+              - '!infra/**'
               - '!.github/workflows/runner-*.yml'
 
   check-runner:
@@ -420,16 +430,25 @@ jobs:
   validate:
     name: Validation Check
     runs-on: ${{ github.event.inputs.runner_label == 'self-hosted' && 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted' && 'self-hosted' || 'ubuntu-latest' }}
-    needs: [build, check-runner]
+    needs: [build, check-runner, check-paths]
     if: always()
     steps:
       - name: Check build status
         run: |
           BUILD_RESULT="${{ needs.build.result }}"
           PROVISIONING="${{ needs.check-runner.outputs.provisioning_triggered }}"
+          RUN_MAIN_CI="${{ needs.check-paths.outputs.run_main_ci }}"
 
           echo "Build result: $BUILD_RESULT"
           echo "Provisioning triggered: $PROVISIONING"
+          echo "Run main CI: $RUN_MAIN_CI"
+
+          # If paths filter determined no CI needed, skipped build is OK
+          if [[ "$RUN_MAIN_CI" != "true" && "$BUILD_RESULT" == "skipped" ]]; then
+            echo "ℹ️ Build skipped - no relevant code changes detected"
+            echo "   Only documentation or config files were modified"
+            exit 0
+          fi
 
           # If provisioning was triggered, build is expected to be skipped
           if [[ "$PROVISIONING" == "true" && "$BUILD_RESULT" == "skipped" ]]; then
@@ -448,9 +467,17 @@ jobs:
             exit 0
           fi
 
+          # Handle cancelled builds (user action or concurrency cancellation)
+          if [[ "$BUILD_RESULT" == "cancelled" ]]; then
+            echo "⚠️ Build was cancelled"
+            echo "   This is expected when a newer commit is pushed to the same PR"
+            # Exit 0 for cancelled - it's not a failure, just superseded
+            exit 0
+          fi
+
           # Normal case: build must succeed
           if [[ "$BUILD_RESULT" != "success" ]]; then
-            echo "❌ Build failed or was cancelled"
+            echo "❌ Build failed"
             exit 1
           fi
           echo "✅ All checks passed!"
