fix: explicit gradle toolchain configuration and build health improvements
- Centralize toolchain management to root project (JDK 21)
- Explicitly target JVM 17 bytecode for Java, Kotlin, and Groovy
- Fix GroovyGdkProvider to correctly handle Object methods
- Update Foojay resolver to 1.0.0
- Add .export-ignore to .gitattributes
- Add setup.sh and direnv support for better DX
- Disable Kover for modules without tests

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 tools/ export-ignore
+.agent/ export-ignore
+.devcontainer/ export-ignore
+.gemini/ export-ignore
+.kiro/ export-ignore
+.spec/ export-ignore
 
 
