refactor: shell script improvements based on PR feedback

--- a/.envrc
+++ b/.envrc
@@ -11,7 +11,7 @@ fi
 
 # Load SDKMAN environment if available
 if [ -s ".sdkmanrc" ] && [ -n "$SDKMAN_DIR" ]; then
-    JAVA_VERSION=$(grep "java=" .sdkmanrc | cut -d= -f2)
+    JAVA_VERSION=$(grep "^java=" .sdkmanrc | cut -d= -f2)
     if [ -n "$JAVA_VERSION" ]; then
         candidate_home="$SDKMAN_DIR/candidates/java/$JAVA_VERSION"
         if [ -d "$candidate_home" ]; then
