--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,16 @@
 # Gradle properties
-# JVM args optimized for BV4-16-10 runner (4 vCPU, 16GB RAM)
-org.gradle.jvmargs=-Xms2g -Xmx6g -XX:+UseG1GC -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# JVM args optimized for High-Performance (Apple Silicon / Modern Mac)
+org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+UseG1GC -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Performance Tuning
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.configuration-cache.problems=warn
-org.gradle.workers.max=4
+org.gradle.vfs.watch=true
+# Allow Gradle to use more workers (defaults to CPU count, usually better than hardcoding 4)
+# org.gradle.workers.max=4
+
 # Due to a deprecation warning in io.gitlab.arturbosch.detekt.DetektPlugin.apply(DetektPlugin.kt:28)
 # which we have no control over, we are setting the warning mode to none.
 org.gradle.warning.mode=none
