build: upgrade Gradle Daemon to use Generational ZGC
- Replace G1GC with ZGC (+Generational mode)
- Optimal for long-lived daemons on Java 21+ with large heaps (8GB)
- Provides sub-millisecond GC pauses for better IDE responsiveness

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Gradle properties
 # JVM args optimized for High-Performance (Apple Silicon / Modern Mac)
-org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+UseG1GC -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# Using Generational ZGC (Java 21+) for sub-millisecond pauses and high throughput
+org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+UseZGC -XX:+ZGenerational -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # Performance Tuning
 org.gradle.parallel=true
