--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Gradle properties
-# JVM args optimized for High-Performance (Apple Silicon / Modern Mac)
-# Using Generational ZGC (Java 21+) for sub-millisecond pauses and high throughput
-org.gradle.jvmargs=-Xms2g -Xmx8g -XX:+UseZGC -XX:+ZGenerational -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# JVM args optimized for CI / Standard Development Environment (Safe defaults)
+# TODO: Consider moving high-performance overrides (8GB/ZGC) to a system-level gradle.properties or .envrc
+org.gradle.jvmargs=-Xms512m -Xmx4g -XX:+UseG1GC -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # Performance Tuning
 org.gradle.parallel=true
