feat: Codebase Health Improvements (Batch 1) (#308)
* chore: improve macOS setup and Makefile Java detection

* refactor: simplify Makefile Java detection

- Revert complex auto-detection logic in Makefile
- Rely on proper shell configuration (fixed in setup.sh)
- Ensure setup.sh correctly configures .zshrc with SDKMAN and direnv

* build: optimize Gradle performance for local dev

- Increase local test memory (4GB) and enable parallel forks
- Enable VFS watching (critical for macOS)
- Increase Daemon heap to 8GB
- Maintain conservative settings for CI environments

* build: upgrade Gradle Daemon to use Generational ZGC

- Replace G1GC with ZGC (+Generational mode)
- Optimal for long-lived daemons on Java 21+ with large heaps (8GB)
- Provides sub-millisecond GC pauses for better IDE responsiveness

* refactor(jenkins): extract name conversion utilities and improve symbol filtering

- Create NameConversions.kt with shared utilities:
  - simpleClassName(): Extract class from FQN
  - toLowerCamelCase(): Convert to lowerCamelCase
  - toStepName(): Derive step name from class name
  - toPropertyName(): Convert setter to property name
  - extractSymbolName(): Parse annotation values

- Add NameConversionsTest.kt with 20 test cases

- Refactor JenkinsPluginMetadataExtractor.kt:
  - Use shared utilities instead of inline string operations
  - Make SKIP_SYMBOLS case-insensitive via shouldSkipSymbol()
  - Remove code duplication for symbol extraction

- Refactor JenkinsClasspathScanner.kt:
  - Use shared toLowerCamelCase, toPropertyName, toStepName

- Add groovy-common dependency to groovy-jenkins module

This reduces code duplication and improves maintainability.

* build: finalize Gradle memory configuration

- Downgrade gradle.properties to safe defaults (4GB/G1GC) for CI stability
- Inject high-performance settings (8GB/ZGC) via .envrc for local dev
- Remove redundant overrides from CI workflow
- Add TODO for future system-level config consideration

* feat(jenkins): fix 

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,17 @@
 # Gradle properties
-# JVM args optimized for BV4-16-10 runner (4 vCPU, 16GB RAM)
-org.gradle.jvmargs=-Xms2g -Xmx6g -XX:+UseG1GC -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+# JVM args optimized for CI / Standard Development Environment (Safe defaults)
+# TODO: Consider moving high-performance overrides (8GB/ZGC) to a system-level gradle.properties or .envrc
+org.gradle.jvmargs=-Xms512m -Xmx4g -XX:+UseG1GC -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Performance Tuning
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.configuration-cache.problems=warn
-org.gradle.workers.max=4
+org.gradle.vfs.watch=true
+# Allow Gradle to use more workers (defaults to CPU count, usually better than hardcoding 4)
+# org.gradle.workers.max=4
+
 # Due to a deprecation warning in io.gitlab.arturbosch.detekt.DetektPlugin.apply(DetektPlugin.kt:28)
 # which we have no control over, we are setting the warning mode to none.
 org.gradle.warning.mode=none
