--- a/tests/e2e/resources/scenarios/discover-tests.yaml
+++ b/tests/e2e/resources/scenarios/discover-tests.yaml
@@ -1,7 +1,3 @@
-# DISABLED: E2E framework limitation - LSP4J RemoteEndpoint returns null for custom @JsonRequest methods
-# See: https://github.com/eclipse-lsp4j/lsp4j/issues/143 (runtime extension guidance)
-# The server correctly discovers tests, but the E2E client doesn't receive the response.
-# To re-enable: Remove the _ prefix from filename and fix the E2E framework's custom method handling.
 name: discover-tests
 description: Verify groovy/discoverTests custom request discovers Spock specifications
 
@@ -32,35 +28,29 @@ steps:
       saveAs: result
 
   # Verify the response structure
-  # TODO: Support gte expectation type in E2E framework, then use:
-  # - jsonPath: $.length()
-  #   expect:
-  #     gte: 1
-  # - jsonPath: $[0].tests.length()
-  #   expect:
-  #     gte: 1
-  # - jsonPath: $[0].tests[0].line
-  #   expect:
-  #     gte: 1
   - assert:
       source: result
       checks:
         # Check that we got at least one test suite
-        - jsonPath: $[0].suite
+        - jsonPath: $.length()
           expect:
-            exists: true
+            gte: 1
         # Check the first suite has the expected class name
         - jsonPath: $[0].suite
           expect:
             contains: 'CalculatorSpec'
         # Check the suite has tests
+        - jsonPath: $[0].tests.length()
+          expect:
+            gte: 1
+        # Check the first test has a name
         - jsonPath: $[0].tests[0].test
           expect:
-            exists: true
-        # Check line numbers are present
+            not_empty: true
+        # Check line numbers are present and valid
         - jsonPath: $[0].tests[0].line
           expect:
-            exists: true
+            gte: 1
 
   - shutdown: {}
   - exit: {}
