--- a/tests/e2e/resources/scenarios/discover-tests.yaml
+++ b/tests/e2e/resources/scenarios/discover-tests.yaml
@@ -16,11 +16,20 @@ steps:
       path: src/test/groovy/com/example/CalculatorSpec.groovy
       languageId: groovy
 
-  # Wait for compilation to settle
+  # Wait for Gradle dependency resolution to complete.
+  # In in-process mode, server->client notifications don't work until JSON-RPC
+  # connection is established (after first request/response cycle). Since
+  # initialized() triggers async resolution before this, we use a fixed wait.
+  # Gradle resolution typically takes 5-6s on warm cache, 60-180s on cold.
+  #
+  # TODO(#314): Replace with proper synchronization (e.g., waitNotification or polling).
+  #   See: https://github.com/albertocavalcante/groovy-lsp/issues/314
   - wait:
-      duration: 1000
+      duration: 10000
 
-  # Send custom groovy/discoverTests request
+  # Custom groovy/discoverTests request - uses typed GroovyLanguageServerProtocol proxy
+  # for proper response deserialization. This is handled by CustomRequest.DiscoverTests
+  # in StepExecutors.kt which routes through session.groovyServer.discoverTests().
   - request:
       method: groovy/discoverTests
       params:
@@ -39,11 +48,11 @@ steps:
         - jsonPath: $[0].suite
           expect:
             contains: 'CalculatorSpec'
-        # Check the suite has tests
+        # Check the suite has tests (CalculatorSpec has 2 feature methods)
         - jsonPath: $[0].tests.length()
           expect:
             gte: 1
-        # Check the first test has a name
+        # Check tests have names
         - jsonPath: $[0].tests[0].test
           expect:
             not_empty: true
