--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -51,25 +51,22 @@ jobs:
     steps:
       - name: Validate ref input
         shell: bash
+        env:
+          REF_INPUT: ${{ github.event.inputs.ref || 'main' }}
         run: |
-          REF="${{ github.event.inputs.ref || 'main' }}"
           # Validate ref matches allowed patterns: branch names, tags, or SHAs
-          if [[ ! "$REF" =~ ^[a-zA-Z0-9._/-]+$ ]] || [[ "$REF" =~ \.\. ]]; then
-            echo "::error::Invalid ref format: $REF"
+          if [[ ! "$REF_INPUT" =~ ^[a-zA-Z0-9._/-]+$ ]] || [[ "$REF_INPUT" =~ \.\. ]]; then
+            echo "::error::Invalid ref format: $REF_INPUT"
             exit 1
           fi
-          # Additional safety: disallow refs that could be injection vectors
-          if [[ "$REF" == *";"* ]] || [[ "$REF" == *"&"* ]] || [[ "$REF" == *"|"* ]] || [[ "$REF" == *"\`"* ]]; then
-            echo "::error::Potentially malicious ref detected: $REF"
-            exit 1
-          fi
-          echo "Validated ref: $REF"
+          echo "Validated ref: $REF_INPUT"
+          echo "VALIDATED_REF=$REF_INPUT" >> "$GITHUB_ENV"
 
       - name: Checkout
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
-          ref: ${{ github.event.inputs.ref || 'main' }}
+          ref: ${{ env.VALIDATED_REF || github.event.inputs.ref || 'main' }}
 
       - name: Setup Java
         uses: actions/setup-java@v5
