fix(security): remove unvalidated ref from checkout fallback
Prevent bypass of ref validation if GITHUB_ENV write fails by only
using VALIDATED_REF or the safe 'main' default in the fallback chain.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
-          ref: ${{ env.VALIDATED_REF || github.event.inputs.ref || 'main' }}
+          ref: ${{ env.VALIDATED_REF || 'main' }}
 
       - name: Setup Java
         uses: actions/setup-java@v5
