--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,6 +145,7 @@ jobs:
       uses: actions/checkout@v6
       with:
         fetch-depth: 0
+        ref: ${{ github.event.inputs.tag || github.ref }}
     - name: Download all artifacts
       uses: actions/download-artifact@v7
       with:
